# 2022ESWContest_free_1106

./: README.md
FaceRecognition/: CMakeLists.txt
FaceRecognition/src/: .main.c.swp  face.cpp  face.h  main_ref.cpp  setting.cpp
FaceRecognition/src/backup/: main_backup.cpp
Final_gimbal/: Final_gimbal.ino
Image_Processing/FaceRecognition/: CMakeLists.txt
Image_Processing/FaceRecognition/src/: .face.cpp.swp  .main.cpp.swp  .main_ref.cpp.swp  face.cpp  face.h  face_back.cpp  main.cpp  main.h  setting.h
Image_Processing/FaceRecognition/src/backup/: main_backup2.cpp  main_backup3.cpp
Image_Processing/FaceRegister/: CMakeLists.txt
Image_Processing/FaceRegister/src/: .main.cpp.swp  main.cpp  main_back.cpp
My_MPU6050/: My_MPU6050.ino
Qt_UI_Display/: Makefile  mainwindow.cpp  mainwindow.h  mainwindow.ui  pjtQtDisplay  pjtQtDisplay.pro  pjtQtDisplay.pro.user.d0785dc  pjtQtDisplay_en_US.ts  sockets.cpp  sockets.h
final_socket/: Makefile  client  final_client.c  final_server.c  idpasswd.txt  server
gimbal/: gimbal.ino
servo/: servo.ino
